--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/chai": "^3.4.35",
     "@types/chai-as-promised": "0.0.29",
     "@types/jquery": "^2.0.42",
-    "@types/lodash": "^4.14.62",
     "@types/mocha": "^2.2.39",
     "@types/node": "^7.0.5",
     "@types/sinon": "^1.16.35",
@@ -54,8 +53,6 @@
     "bootstrap": ">=3.3.6 <3.4",
     "chai": ">=3 <4",
     "chai-as-promised": "^6.0.0",
-    "colors": ">=1.0.3 <2",
-    "compression": ">=1.2.0 <2",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "del": ">=2.0.2 <3",
@@ -63,22 +60,15 @@
     "eslint": "^3.16.1",
     "eslint-config-lddubeau-base": "^1.0.4",
     "event-stream": ">=3.3.1 <4",
-    "express": ">=4.10.2 <5",
     "font-awesome": ">=4.4.0 <4.5",
     "fs-extra": ">=0.26.0 <1",
     "gulp": ">=3.9.0 <4",
-    "gulp-changed": ">=1.3.0 <2",
     "gulp-debug": ">=2.1.0 <3",
     "gulp-eslint": "^3.0.1",
-    "gulp-filter": ">=3.0.1 <4",
-    "gulp-less": ">=3.0.3 <4",
     "gulp-newer": ">=1.0.0 <2",
-    "gulp-rename": ">=1.2.2 <2",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-typescript": "^3.1.5",
-    "gulp-wrap-amd": ">=0.5.0 <1",
-    "headless": ">=1.0.0 <2",
+    "gulp-typescript": "https://github.com/lddubeau/gulp-typescript/tarball/experiment/support-extends.tgz",
     "html-loader": "^0.4.4",
     "jquery": ">=2.0.0 <3",
     "karma": "^1.4.1",
@@ -90,10 +80,8 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-typescript-preprocessor2": "https://registry.npmjs.org/karma-typescript-preprocessor2/-/karma-typescript-preprocessor2-1.2.1.tgz",
     "last-resort": "^0.1.0",
-    "less": ">=2 <3",
     "lite-server": "^2.3.0",
     "mocha": "^3.2.0",
-    "morgan": ">=1.5.0 <2",
     "raw-loader": "^0.5.1",
     "require-dir": ">=0.3.0 <1",
     "requirejs": ">=2.1.15 <3",
@@ -102,7 +90,6 @@
     "salve-dom": "^1.1.1",
     "semver": ">=5 <6",
     "serve-static": ">=1.7.1 <2",
-    "shell-quote": ">=1.4.3 <2",
     "sinon": "https://registry.npmjs.org/sinon/-/sinon-1.17.5.tgz",
     "sinon-chai": "^2.9.0",
     "systemjs": "^0.20.12",
@@ -113,8 +100,6 @@
     "tslint-config-lddubeau": "^1.0.3",
     "tslint-microsoft-contrib": "^4.0.1",
     "typescript": "2.2",
-    "versync": "^3.1.0",
-    "vinyl-file": ">=1.2.1 <2",
     "webpack": "^2.2.1",
     "wed": "0.28.2",
     "zone.js": "^0.8.10"
