--- a/package.json
+++ b/package.json
@@ -22,10 +22,6 @@
     }
   ],
   "dependencies": {
-    "salve": ">=4.1.0 <5",
-    "urijs": ">=1.16.1 <2"
-  },
-  "devDependencies": {
     "@angular/common": "^2.4.10",
     "@angular/compiler": "^2.4.10",
     "@angular/core": "^2.4.10",
@@ -37,30 +33,42 @@
     "@types/blueimp-md5": "^1.1.30",
     "@types/bootbox": "^4.4.30",
     "@types/bootstrap": "^3.3.32",
-    "@types/chai": "^3.4.35",
-    "@types/chai-as-promised": "0.0.29",
     "@types/jquery": "^2.0.42",
-    "@types/mocha": "^2.2.39",
-    "@types/node": "^7.0.5",
-    "@types/sinon": "^1.16.35",
-    "@types/sinon-chai": "^2.7.27",
-    "angular2-template-loader": "^0.6.2",
     "bluebird": ">=3.2.2 <4",
     "blueimp-md5": "^2.7.0",
     "bluejax": "^1.1.0",
     "bluejax.try": "^1.0.0",
     "bootbox": ">=4.4.0 <5",
     "bootstrap": ">=3.3.6 <3.4",
-    "chai": ">=3 <4",
-    "chai-as-promised": "^6.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
+    "dexie": "^2.0.0-beta.11",
+    "font-awesome": ">=4.4.0 <4.5",
+    "jquery": ">=2.0.0 <3",
+    "last-resort": "^0.1.0",
+    "rxjs": "^5.1.0",
+    "salve": ">=4.1.0 <5",
+    "salve-dom": "^1.1.1",
+    "systemjs": "^0.20.12",
+    "systemjs-plugin-json": "^0.3.0",
+    "urijs": ">=1.16.1 <2",
+    "wed": "0.28.2",
+    "zone.js": "^0.8.10"
+  },
+  "devDependencies": {
+    "@types/chai": "^3.4.35",
+    "@types/chai-as-promised": "0.0.29",
+    "@types/mocha": "^2.2.39",
+    "@types/node": "^7.0.5",
+    "@types/sinon": "^1.16.35",
+    "@types/sinon-chai": "^2.7.27",
+    "angular2-template-loader": "^0.6.2",
+    "chai": ">=3 <4",
+    "chai-as-promised": "^6.0.0",
     "del": ">=2.0.2 <3",
-    "dexie": "^2.0.0-beta.10",
     "eslint": "^3.16.1",
     "eslint-config-lddubeau-base": "^1.0.4",
     "event-stream": ">=3.3.1 <4",
-    "font-awesome": ">=4.4.0 <4.5",
     "fs-extra": ">=0.26.0 <1",
     "gulp": ">=3.9.0 <4",
     "gulp-debug": ">=2.1.0 <3",
@@ -70,7 +78,6 @@
     "gulp-sourcemaps": "^2.4.1",
     "gulp-typescript": "https://github.com/lddubeau/gulp-typescript/tarball/experiment/support-extends.tgz",
     "html-loader": "^0.4.4",
-    "jquery": ">=2.0.0 <3",
     "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
@@ -79,30 +86,23 @@
     "karma-mocha": "^1.3.0",
     "karma-remap-coverage": "^0.1.4",
     "karma-typescript-preprocessor2": "https://registry.npmjs.org/karma-typescript-preprocessor2/-/karma-typescript-preprocessor2-1.2.1.tgz",
-    "last-resort": "^0.1.0",
     "lite-server": "^2.3.0",
     "mocha": "^3.2.0",
     "raw-loader": "^0.5.1",
     "require-dir": ">=0.3.0 <1",
     "requirejs": ">=2.1.15 <3",
     "requirejs-text": ">=2.0.12 <3",
-    "rxjs": "^5.1.0",
-    "salve-dom": "^1.1.1",
     "semver": ">=5 <6",
     "serve-static": ">=1.7.1 <2",
     "sinon": "https://registry.npmjs.org/sinon/-/sinon-1.17.5.tgz",
     "sinon-chai": "^2.9.0",
-    "systemjs": "^0.20.12",
-    "systemjs-plugin-json": "^0.3.0",
     "touch": ">=1.0.0 <2",
     "ts-loader": "^2.0.0",
     "tslint": "^4.4.2",
     "tslint-config-lddubeau": "^1.0.3",
     "tslint-microsoft-contrib": "^4.0.1",
     "typescript": "2.2",
-    "webpack": "^2.2.1",
-    "wed": "0.28.2",
-    "zone.js": "^0.8.10"
+    "webpack": "^2.2.1"
   },
   "scripts": {
     "test": "gulp test"
