Require newer versions of systemjs and gulp-typescript.

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "rxjs": "^5.1.0",
     "salve": ">=4.1.2 <5",
     "salve-dom": "^1.1.1",
-    "systemjs": "^0.20.14",
+    "systemjs": "^0.20.15",
     "systemjs-plugin-json": "^0.3.0",
     "urijs": ">=1.16.1 <2",
     "wed": "0.28.2",
@@ -76,7 +76,7 @@
     "gulp-newer": ">=1.0.0 <2",
     "gulp-replace": "^0.5.4",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-typescript": "https://github.com/lddubeau/gulp-typescript/tarball/experiment/support-extends.tgz",
+    "gulp-typescript": "^3.2.0",
     "html-loader": "^0.4.4",
     "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
