--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "lite-server": "^2.3.0",
     "mocha": "^3.2.0",
     "raw-loader": "^0.5.1",
-    "require-dir": ">=0.3.0 <1",
+    "require-dir": "^0.3.2",
     "requirejs": ">=2.1.15 <3",
     "requirejs-text": ">=2.0.12 <3",
     "semver": ">=5 <6",
