Don't use RxJS 5.5 or higher yet.
This is due to the problem loading it with SystemJS described at:

https://github.com/ReactiveX/rxjs/issues/2971

--- a/package.json
+++ b/package.json
@@ -46,16 +46,18 @@
     "font-awesome": ">=4.4.0 <4.5",
     "jquery": ">=2.0.0 <3",
     "last-resort": "^0.1.0",
-    "rxjs": "^5.1.0",
+    "rxjs": ">=5.1.0 <5.5",
     "salve": ">=4.1.2 <5",
     "salve-dom": "^1.1.1",
     "systemjs": "^0.20.19",
     "systemjs-plugin-json": "^0.3.0",
     "urijs": ">=1.16.1 <2",
     "wed": "0.29.0",
+    "zone": "^0.3.4",
     "zone.js": "^0.8.10"
   },
   "devDependencies": {
+    "@ngtools/webpack": "^1.7.4",
     "@types/chai": "^3.4.35",
     "@types/chai-as-promised": "0.0.31",
     "@types/mocha": "^2.2.39",
