--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
-    "karma-remap-coverage": "^0.1.4",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-remap-istanbul": "^0.6.0",
     "karma-typescript-agile-preprocessor": "^2.0.0",
     "lite-server": "^2.3.0",
     "mocha": "^3.2.0",
