--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "ts-loader": "^3.1.1",
     "tslint": "^5.6.0",
     "tslint-config-lddubeau": "^2.0.0",
-    "typescript": "2.4",
+    "typescript": "^2.6.1",
     "webpack": "^3.8.1"
   },
   "scripts": {
