Include an AoT build.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "font-awesome": ">=4.4.0 <4.5",
     "jquery": ">=2.0.0 <3",
     "last-resort": "^0.1.0",
+    "requirejs": ">=2.1.15 <3",
     "rxjs": ">=5.1.0 <5.5",
     "salve": ">=4.1.2 <5",
     "salve-dom": "^1.1.1",
@@ -51,7 +52,6 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^4.4.6",
-    "@ngtools/webpack": "^1.7.4",
     "@types/bluebird": "^3.5.2",
     "@types/blueimp-md5": "^1.1.30",
     "@types/bootbox": "^4.4.30",
@@ -75,9 +75,9 @@
     "gulp-debug": ">=2.1.0 <3",
     "gulp-eslint": "^3.0.1",
     "gulp-newer": ">=1.0.0 <2",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.6.1",
     "gulp-util": "^3.0.8",
-    "html-loader": "^0.4.4",
-    "json-loader": "^0.5.7",
     "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
@@ -89,10 +89,9 @@
     "karma-typescript-agile-preprocessor": "^2.0.0",
     "lite-server": "^2.3.0",
     "mocha": "^3.2.0",
+    "ng-router-loader": "^2.1.0",
     "raw-loader": "^0.5.1",
     "require-dir": "^0.3.2",
-    "requirejs": ">=2.1.15 <3",
-    "requirejs-text": ">=2.0.12 <3",
     "semver": ">=5 <6",
     "serve-static": ">=1.7.1 <2",
     "sinon": "https://registry.npmjs.org/sinon/-/sinon-1.17.5.tgz",
