Load and use individual rxjs modules instead of loading bundle.
Helps with performance.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jquery": ">=2.0.0 <3",
     "last-resort": "^0.1.0",
     "requirejs": ">=2.1.15 <3",
-    "rxjs": ">=5.1.0 <5.5",
+    "rxjs": "^5.5.2",
     "salve": ">=4.1.2 <5",
     "salve-dom": "^1.1.1",
     "systemjs": "^0.20.19",
