Use latest wed.

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "systemjs": "^0.20.19",
     "systemjs-plugin-json": "^0.3.0",
     "urijs": ">=1.16.1 <2",
-    "wed": "0.29.0",
+    "wed": "^1.0.0",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
