--- a/tsconfig-common.json
+++ b/tsconfig-common.json
@@ -13,6 +13,7 @@
     "skipLibCheck": true,
     "outDir": "",
     "sourceMap": true,
+    "inlineSources": true,
     "target": "es5",
     "lib": ["dom", "es2015"]
   }
