Upgrade gulp plugins.

--- a/package.json
+++ b/package.json
@@ -74,9 +74,9 @@
     "gulp": "^3.9.1",
     "gulp-debug": ">=2.1.0 <3",
     "gulp-eslint": "^3.0.1",
-    "gulp-newer": ">=1.0.0 <2",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.6.1",
+    "gulp-newer": "^1.4.0",
+    "gulp-rename": "^1.2.3",
+    "gulp-replace": "^1.0.0",
     "gulp-util": "^3.0.8",
     "karma": "^1.4.1",
     "karma-chai": "^0.1.0",
