--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "chai-as-promised": "^6.0.0",
     "child-process-promise": "^2.2.1",
     "copy-webpack-plugin": "^4.0.1",
-    "del": ">=2.0.2 <3",
+    "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-lddubeau-base": "^2.0.1",
     "fs-extra": ">=0.26.0 <1",
@@ -90,7 +90,7 @@
     "mocha": "^3.2.0",
     "ng-router-loader": "^2.1.0",
     "raw-loader": "^0.5.1",
-    "require-dir": "^0.3.2",
+    "require-dir": "^1.0.0",
     "semver": ">=5 <6",
     "serve-static": ">=1.7.1 <2",
     "sinon": "https://registry.npmjs.org/sinon/-/sinon-1.17.5.tgz",
