--- a/package.json
+++ b/package.json
@@ -77,22 +77,22 @@
     "gulp-rename": "^1.2.3",
     "gulp-replace": "^1.0.0",
     "gulp-util": "^3.0.8",
-    "karma": "^1.4.1",
+    "karma": "^2.0.2",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage": "^1.1.1",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-remap-istanbul": "^0.6.0",
-    "karma-typescript-agile-preprocessor": "^2.0.0",
+    "karma-typescript-agile-preprocessor": "^2.0.1",
     "lite-server": "^2.3.0",
     "mocha": "^3.2.0",
     "ng-router-loader": "^2.1.0",
     "raw-loader": "^0.5.1",
     "require-dir": "^1.0.0",
     "semver": ">=5 <6",
-    "serve-static": ">=1.7.1 <2",
+    "serve-static": "^1.13.2",
     "sinon": "https://registry.npmjs.org/sinon/-/sinon-1.17.5.tgz",
     "sinon-chai": "^2.9.0",
     "ts-loader": "^3.1.1",
