--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-lddubeau-base": "^2.0.1",
-    "fs-extra": ">=0.26.0 <1",
+    "fs-extra": "^6.0.1",
     "gulp": "^4.0.0",
     "gulp-eslint": "^4.0.2",
     "gulp-newer": "^1.4.0",
