--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "@types/blueimp-md5": "^1.1.30",
     "@types/bootbox": "^4.4.30",
     "@types/bootstrap": "^3.3.32",
-    "@types/chai": "^3.4.35",
+    "@types/chai": "^4.1.3",
     "@types/jquery": "^2.0.42",
-    "@types/mocha": "^2.2.39",
+    "@types/mocha": "^5.2.0",
     "@types/node": "^7.0.5",
     "@types/sinon": "^1.16.35",
     "@types/sinon-chai": "^2.7.27",
-    "chai": ">=3 <4",
+    "chai": "^4.1.2",
     "child-process-promise": "^2.2.1",
     "copy-webpack-plugin": "^4.0.1",
     "del": "^3.0.0",
@@ -85,7 +85,7 @@
     "karma-remap-istanbul": "^0.6.0",
     "karma-typescript-agile-preprocessor": "^2.0.1",
     "lite-server": "^2.3.0",
-    "mocha": "^3.2.0",
+    "mocha": "^5.2.0",
     "ng-router-loader": "^2.1.0",
     "raw-loader": "^0.5.1",
     "require-dir": "^1.0.0",
