--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@types/jquery": "^2.0.42",
     "@types/mocha": "^5.2.0",
     "@types/node": "^7.0.5",
-    "@types/sinon": "^1.16.35",
-    "@types/sinon-chai": "^2.7.27",
+    "@types/sinon": "^4.3.3",
+    "@types/sinon-chai": "^2.7.31",
     "chai": "^4.1.2",
     "child-process-promise": "^2.2.1",
     "copy-webpack-plugin": "^4.0.1",
@@ -91,8 +91,8 @@
     "require-dir": "^1.0.0",
     "semver": ">=5 <6",
     "serve-static": "^1.13.2",
-    "sinon": "https://registry.npmjs.org/sinon/-/sinon-1.17.5.tgz",
-    "sinon-chai": "^2.9.0",
+    "sinon": "^5.0.7",
+    "sinon-chai": "^3.1.0",
     "ts-loader": "^3.1.1",
     "tslint": "^5.6.0",
     "tslint-config-lddubeau": "^2.0.0",
