--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "salve-dom": "^1.1.1",
     "systemjs": "^0.21.3",
     "systemjs-plugin-json": "^0.3.0",
-    "urijs": ">=1.16.1 <2",
+    "urijs": "^1.19.1",
     "wed": "^1.0.0",
     "zone.js": "^0.8.18"
   },
