--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "bootstrap": ">=3.3.6 <3.4",
     "core-js": "^2.4.1",
     "dexie": "^2.0.3",
-    "font-awesome": ">=4.4.0 <4.5",
+    "font-awesome": "^4.7.0",
     "jquery": ">=2.0.0 <3",
     "last-resort": "^0.1.0",
     "requirejs": ">=2.1.15 <3",
