--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "core-js": "^2.5.6",
     "dexie": "^2.0.3",
     "font-awesome": "^4.7.0",
-    "jquery": ">=2.0.0 <3",
+    "jquery": "^3.3.1",
     "last-resort": "^0.1.0",
     "requirejs": ">=2.1.15 <3",
     "rxjs": "^5.5.2",
@@ -57,7 +57,7 @@
     "@types/bootbox": "^4.4.36",
     "@types/bootstrap": "^3.3.39",
     "@types/chai": "^4.1.3",
-    "@types/jquery": "^2.0.49",
+    "@types/jquery": "^3.3.2",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.1.2",
     "@types/sinon": "^4.3.3",
