build: upgrade to Angular 6
We had to revert TS to version 2.7 because Angular 6 is not yet compatible with
TS 2.8.

We had to drop the @types/sinon package and use a custom one because it requires
TS 2.8.

--- a/src/tsconfig-aot.json
+++ b/src/tsconfig-aot.json
@@ -2,12 +2,15 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../build/aot/",
-    "noUnusedParameters": false
+    "noUnusedParameters": false,
+    "noEmitOnError": false
   },
   "angularCompilerOptions": {
-    "genDir": "../build/aot/",
     "entryModule": "dashboard/app.module#AppModule",
-    "skipMetadataEmit": false,
-    "strictMetadataEmit": true
+    "strictMetadataEmit": true,
+    "strictInjectionParameters": true,
+    "fullTemplateTypeCheck": true,
+    "preserveWhitespaces": true,
+    "annotationsAs": "decorators"
   }
 }
