--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     }
   ],
   "dependencies": {
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
     "bluebird": ">=3.2.2 <4",
     "blueimp-md5": "^2.7.0",
     "bluejax": "^1.1.0",
@@ -41,7 +41,8 @@
     "jquery": "^3.3.1",
     "last-resort": "^0.1.0",
     "requirejs": ">=2.1.15 <3",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "salve": ">=4.1.2 <5",
     "salve-dom": "^1.1.1",
     "systemjs": "^0.21.3",
@@ -51,7 +52,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.4.6",
+    "@angular/compiler-cli": "^6.0.3",
     "@types/bluebird": "^3.5.20",
     "@types/blueimp-md5": "^2.7.0",
     "@types/bootbox": "^4.4.36",
@@ -60,8 +61,7 @@
     "@types/jquery": "^3.3.2",
     "@types/mocha": "^5.2.0",
     "@types/node": "^10.1.2",
-    "@types/sinon": "^5.0.0",
-    "@types/sinon-chai": "^2.7.31",
+    "@types/sinon-chai": "^2.7.32",
     "chai": "^4.1.2",
     "child-process-promise": "^2.2.1",
     "copy-webpack-plugin": "^4.0.1",
@@ -95,7 +95,7 @@
     "ts-loader": "^3.1.1",
     "tslint": "^5.10.0",
     "tslint-config-lddubeau": "^2.0.3",
-    "typescript": "^2.8.3",
+    "typescript": "^2.7.2",
     "webpack": "^3.8.1"
   },
   "scripts": {
