build: upgrade to rxjs 6

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/sinon": "^4.3.3",
     "bluebird": ">=3.2.2 <4",
     "blueimp-md5": "^2.7.0",
     "bluejax": "^1.1.0",
@@ -42,7 +43,6 @@
     "last-resort": "^0.1.0",
     "requirejs": ">=2.1.15 <3",
     "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.2.0",
     "salve": ">=4.1.2 <5",
     "salve-dom": "^1.1.1",
     "systemjs": "^0.21.3",
