--- a/package.json
+++ b/package.json
@@ -92,11 +92,12 @@
     "serve-static": "^1.13.2",
     "sinon": "^6.0.0",
     "sinon-chai": "^3.2.0",
-    "ts-loader": "^3.1.1",
+    "ts-loader": "^4.4.1",
     "tslint": "^5.10.0",
     "tslint-config-lddubeau": "^2.0.3",
     "typescript": "^2.7.2",
-    "webpack": "^3.8.1"
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.6"
   },
   "scripts": {
     "test": "gulp test"
