--- a/package.json
+++ b/package.json
@@ -68,13 +68,13 @@
     "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-config-lddubeau-base": "^2.0.1",
+    "fancy-log": "^1.3.2",
     "fs-extra": "^6.0.1",
     "gulp": "^4.0.0",
     "gulp-eslint": "^4.0.2",
     "gulp-newer": "^1.4.0",
     "gulp-rename": "^1.3.0",
     "gulp-replace": "^1.0.0",
-    "gulp-util": "^3.0.8",
     "karma": "^2.0.2",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
