--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "6.0.3",
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-angular": "^7.0.1",
     "@types/bluebird": "^3.5.20",
     "@types/blueimp-md5": "^2.7.0",
     "@types/bootbox": "^4.4.36",
@@ -75,6 +77,7 @@
     "gulp-newer": "^1.4.0",
     "gulp-rename": "^1.3.0",
     "gulp-replace": "^1.0.0",
+    "husky": "^0.14.3",
     "karma": "^2.0.2",
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
@@ -100,6 +103,7 @@
     "webpack-cli": "^3.0.6"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "commitmsg": "commitlint -E GIT_PARAMS"
   }
 }
